profileweb.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: profile
  name: profile-deploy
spec:
  replicas: 3
  selector:
    matchLabels:
      app: profile
  template:
    metadata:
      labels:
        app: profile
    spec:
      containers:
      - name: profile
        image: guruprasadsingirikonda/kubernetesimage:v2
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 80
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 3
        ports:
        - containerPort: 80
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 80
            scheme: HTTP
          initialDelaySeconds: 4
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 3
