profileweb-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: profileweb-svc
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: profile
  type: NodePort
