profile-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: profile-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
#    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
        - path: /
          backend:
            serviceName: profileweb-svc
            servicePort: 80
